Uploaded image for project: 'Qpid Proton'
  1. Qpid Proton
  2. PROTON-432

seg fault when handling error

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Blocker
    • Resolution: Fixed
    • proton-0.5
    • proton-0.6
    • proton-c
    • None

    Description

      $ ./proton-c/examples/messenger/c/send -a amqp://gordon:gordon@localhost/my-queue
      Connected to localhost:5672
          -> SASL
      [0x18b8320:0] -> @sasl-init(65) [mechanism=:PLAIN, initial-response=b"\x00gordon\x00gordon"]
          <- SASL
      [0x18b8320:0] <- @sasl-mechanisms(64) [sasl-server-mechanisms=@PN_SYMBOL[:ANONYMOUS, :PLAIN, :AMQPLAIN]]
      [0x18b8320:0] <- @sasl-outcome(68) [code=0]
          -> AMQP
      [0x18b08d0:0] -> @open(16) [container-id="8133b412-5ca8-4359-be9f-e236b87d3528", hostname="localhost"]
      [0x18b08d0:0] -> @begin(17) [next-outgoing-id=0, incoming-window=2147483647, outgoing-window=1]
      [0x18b08d0:0] -> @attach(18) [name="sender-xxx", handle=0, role=false, snd-settle-mode=2, rcv-settle-mode=0, source=@source(40) [address="my-queue", durable=0, timeout=0, dynamic=false], target=@target(41) [address="my-queue", durable=0, timeout=0, dynamic=false], initial-delivery-count=0]
          <- AMQP
      [0x18b08d0:0] <- @open(16) [container-id="rabbit@GRS-T520", idle-time-out=600000, properties={:copyright="Copyright (C) 2007-2013 VMware, Inc.", :information="Licensed under the MPL.  See http://www.rabbitmq.com/", :platform="Erlang/OTP", :product="RabbitMQ", :version="3.1.3"}]
      [0x18b08d0:0] <- @open(16) [container-id="rabbit@GRS-T520", idle-time-out=600000, properties={:copyright="Copyright (C) 2007-2013 VMware, Inc.", :information="Licensed under the MPL.  See http://www.rabbitmq.com/", :platform="Erlang/OTP", :product="RabbitMQ", :version="3.1.3"}]
      Segmentation fault (core dumped)
      

      #0 0x00007f799b10c0e0 in pn_data_rewind () from /home/gordon/projects/proton/build/proton-c/libqpid-proton.so.2
      #1 0x00007f799b11555f in pn_do_close () from /home/gordon/projects/proton/build/proton-c/libqpid-proton.so.2
      #2 0x00007f799b111554 in pn_dispatch_frame () from /home/gordon/projects/proton/build/proton-c/libqpid-proton.so.2
      #3 0x00007f799b1116e7 in pn_dispatcher_input () from /home/gordon/projects/proton/build/proton-c/libqpid-proton.so.2
      #4 0x00007f799b1169ee in pn_input_read_amqp () from /home/gordon/projects/proton/build/proton-c/libqpid-proton.so.2
      #5 0x00007f799b114855 in transport_consume () from /home/gordon/projects/proton/build/proton-c/libqpid-proton.so.2
      #6 0x00007f799b1185e2 in pn_transport_process () from /home/gordon/projects/proton/build/proton-c/libqpid-proton.so.2
      #7 0x00007f799b1204fb in pn_connector_process () from /home/gordon/projects/proton/build/proton-c/libqpid-proton.so.2
      #8 0x00007f799b11e420 in pn_messenger_tsync () from /home/gordon/projects/proton/build/proton-c/libqpid-proton.so.2
      #9 0x00000000004010f3 in main ()

      Attachments

        Issue Links

          Activity

            People

              rhs Rafael H. Schloming
              gsim Gordon Sim
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: