PROTON-432: switched pn_condition_t to use pn_string_t, this fixes the seg fault

git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1534130 13f79535-47bb-0310-9956-ffa450edef68